# fundoc

./: .editorconfig  .gitignore  .grenrc  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  book.toml  fundoc.json  sonar-project.properties
.github/workflows/: build.yml  changelog.yml  fundoc.yml  lint.yml  sonar.yml  tests.yml
book/: 404.html  configuration.html  index.html  print.html  searchindex.js  searchindex.json  syntax.html
ci/: before_deploy.sh
docs/: 404.html  book.toml  configuration.html  configuration.md  index.html  plugins.html  print.html  readme.md  searchindex.js  searchindex.json  syntax.html  syntax.md  test_article.html
docs/book/: 404.html  configuration.html  index.html  print.html  searchindex.js  searchindex.json  syntax.html
docs_src/: SUMMARY.md  configuration.md  syntax.md  test_article.md
plugins/: mermaid.html.lua
plugins/preprocessors/: mermaid.html.lua
src/: book.rs  cli.rs  config.rs  fs_utils.rs  generator.rs  git.rs  lua_runtime.rs  main.rs  parser.rs  plugins.rs
