[package]
name = "fundoc"
version = "0.4.3"
authors = ["Sergey Golovin <golovim@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The right tool for documentation generating"
readme = "README.md"
homepage = "https://github.com/CSSSR/fundoc"
repository = "https://github.com/CSSSR/fundoc"
keywords = ["cli", "documentation", "generator"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
glob = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ansi_term = "0.12.1"
clap = "4.1.8"
mdbook = "0.4.28"
dialoguer = "0.10.3"
url = "2.3.1"
