[package]
name = "fundoc"
version = "0.5.0"
authors = ["Sergey Golovin <golovim@gmail.com>"]
edition = "2018"
license = "MIT"
description = "fundoc - is a documentation generator that helps you keep your documentation up-to-date."
readme = "README.md"
homepage = "https://github.com/CSSSR/fundoc"
repository = "https://github.com/CSSSR/fundoc"
keywords = ["cli", "documentation", "generator"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
glob = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ansi_term = "0.12.1"
clap = "4.1.8"
mdbook = "0.4.28"
dialoguer = "0.10.3"
url = "2.3.1"
rlua = "0.19.4"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/fundoc", dest = "/usr/bin/fundoc", mode = "755" },
    { source = "./images/logo.png", dest = "/usr/share/icons/hicolor/", mode = "644" },
]
